New-AmlCustomModule commandlet added.

--- a/code/AzureMLPS.csproj
+++ b/code/AzureMLPS.csproj
@@ -54,6 +54,7 @@
     <Compile Include="AzureMLSDK.cs" />
     <Compile Include="PowerShell\BaseCmdlets.cs" />
     <Compile Include="Contracts.cs" />
+    <Compile Include="PowerShell\CustomModuleCmdlets.cs" />
     <Compile Include="PowerShell\DatasetCmdlets.cs" />
     <Compile Include="PowerShell\ExperimentCmdlets.cs" />
     <Compile Include="PowerShell\InvokeWebServiceCmdlets.cs" />
