--- a/code/AmlClient/AmlClient.csproj
+++ b/code/AmlClient/AmlClient.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{16FB3C9D-4BBF-4391-8B8B-021C1C0C598D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AmlClient</RootNamespace>
+    <RootNamespace>AzureMachineLearning</RootNamespace>
     <AssemblyName>AmlClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -30,9 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
@@ -43,10 +47,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
+    <Compile Include="AmlResult.cs" />
+    <Compile Include="AzureClient.cs" />
+    <Compile Include="AmlClient.cs" />
     <Compile Include="Contracts.cs" />
+    <Compile Include="DataSourceType.cs" />
+    <Compile Include="Experiment.cs" />
+    <Compile Include="ExperimentInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ExperimentRequest.cs" />
+    <Compile Include="ResourceUploadResponse.cs" />
     <Compile Include="Util.cs" />
+    <Compile Include="ResourceClient.cs" />
+    <Compile Include="WorkspaceSettings.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bes_verbatim\register.json" />
+    <None Include="bes_verbatim\response.final.json" />
+    <None Include="bes_verbatim\response.status.json" />
+    <None Include="bes_verbatim\swagger.api.json" />
+    <None Include="bes_verbatim\swagger.endpointapi.json" />
+    <None Include="packages.config" />
+    <None Include="text.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bes_verbatim\notes.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
